change some places, add file with variables

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:regular,700"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <title>ToDo приложение</title>
   </head>
@@ -45,7 +49,7 @@
 
       <!-- Form -->
       <div class="card bg-light">
-        <div class="card-header">Добавить новую задачу</div>
+        <!-- <div class="card-header"></div> -->
         <div class="card-body">
           <form id="form">
             <div class="form-group">
@@ -53,7 +57,7 @@
                 type="text"
                 class="form-control"
                 id="taskInput"
-                placeholder="Текст задачи"
+                placeholder="Добавить новую задачу"
                 required
               />
               <small id="emailHelp" class="form-text text-muted"
@@ -72,8 +76,11 @@
     </div>
 
     <div class="copyright">
-      Бесплатный практикум по JavaScript от
-      <a href="https://webcademy.ru" target="_blank">ВебКадеми</a>
+      ToDo on JavaScript
+      <a href="https://t.me/freecode_22" target="_blank">
+        <img class="tgimage" src="img/icons/telegram.svg" alt="telegram" />
+        freecode</a
+      >
     </div>
 
     <script src="js/main.js"></script>
